facing issue to alignment text

--- a/HTML_CSS_Practice/Day8/style.css
+++ b/HTML_CSS_Practice/Day8/style.css
@@ -12,9 +12,14 @@ html,body{
     background-repeat: no-repeat;
     background-size: cover;
 }
-.container  div{
+.container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 70px;
+    padding: 50px;
+}
+div .first-chilc{
+    
 }
